# talos-tui

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  mypy.ini
.agent/: README.md  repo_policy.md
.agent/agents/design/: brand-guardian.md  ui-designer.md  ux-researcher.md  visual-storyteller.md  whimsy-injector.md
.agent/agents/engineering/: ai-engineer.md  backend-architect.md  devops-automator.md  frontend-developer.md  mobile-app-builder.md  rapid-prototyper.md
.agent/agents/marketing/: app-store-optimizer.md  content-creator.md  growth-hacker.md  instagram-curator.md  (+3 more)
.agent/workflows/: README.md
ci/scripts/: check_interop.sh
contracts/ui/: README.md
helm/talos-tui/: Chart.yaml  values.yaml
python/: Makefile  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt
python/src/talos_tui/: app.py
python/src/talos_tui/adapters/: audit_http.py  base.py  gateway_http.py  mock.py  redaction.py  sdk_auth.py
python/src/talos_tui/core/: contracts.py  coordinator.py  state.py
python/src/talos_tui/domain/: models.py
python/src/talos_tui/ports/: __init__.py  errors.py
python/src/talos_tui/runtime/: supervisor.py
python/src/talos_tui/ui/: talos.tcss
python/src/talos_tui/ui/screens/: audit.py  dashboard.py  startup.py
python/tests/: test_perf_budget.py
python/tests/architecture/: test_import_rules.py
python/tests/integration/: test_handshake.py  test_manual_checklist.py
python/tests/unit/: test_audit_adapter.py  test_core_resilience.py  test_gateway_adapter.py  test_redaction.py  test_screens.py  test_supervisor.py
(+22 files in other folders)
