[project]
name = "talos-protocol-tui"
version = "0.1.0"
description = "Terminal User Interface for Talos Protocol"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.40.0,<1.0.0",
    "talos-sdk-py>=0.1.25,<0.2.0",
    "pydantic>=2.0.0,<3.0.0",
    "aiohttp>=3.9.0,<4.0.0",
]

[project.scripts]
talos-tui = "talos_tui.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"talos_tui.ui" = ["*.tcss"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (Google)
]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["talos_tui"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 80

[tool.mypy]
python_version = "3.11"
strict = true
disallow_any_generics = true
warn_return_any = true

[[tool.mypy.overrides]]
# Allow looser typing for tests if needed, but keeping strict for now
module = "tests.*"
disallow_untyped_defs = false
